--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Challenge List</title>
   </head>
-  <body>
+  <body style="background: hsl(220, 20%, 5%)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
